--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,13 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
     "sucrase": "^3.15.0"
   }
 }
