Gerando hash da senha

--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "eslinty": "yarn eslint --fix src --ext .js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
