--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.1",
     "multer": "^1.4.2",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
