--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server",
+    "queue": "nodemon src/queue.js",
     "eslinty": "yarn eslint --fix src --ext .js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.3",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.5",
