--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,12 @@
     "eslinty": "yarn eslint --fix src --ext .js"
   },
   "dependencies": {
+    "@sentry/node": "5.19.0",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^4.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
@@ -22,6 +24,7 @@
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.18.4",
+    "youch": "^2.0.10",
     "yup": "^0.29.1"
   },
   "devDependencies": {
