--- a/web/package.json
+++ b/web/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "web",
+  "name": "gobarber-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "history": "^5.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "reactotron-react-js": "^3.3.7"
+    "history": "^4.10.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "reactotron-react-js": "^3.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix src --ext .js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,15 +33,15 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
-    "eslint": "^4.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-import": "^2.18.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-jsx-a11y": "^6.2.4",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.2",
-    "eslint-plugin-react-hooks": "^1.6.1",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.18.2"
   }
 }
